[gd_scene load_steps=11 format=3 uid="uid://dywp0ay8t11op"]

[ext_resource type="Script" path="res://Scripts/PlayerScript.gd" id="1_wcbko"]
[ext_resource type="Texture2D" uid="uid://cg65q2rhxkg0w" path="res://Animations/Hamish/hamish.png" id="2_05qqg"]

[sub_resource type="Animation" id="Animation_crqxu"]
resource_name = "Attack1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePlayer1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_gqi7f"]
resource_name = "Run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePlayer1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_il7o1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePlayer1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [40]
}

[sub_resource type="Animation" id="Animation_k3a2f"]
resource_name = "Running"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePlayer1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.233333, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [140, 141, 142, 143, 144, 145, 146, 147]
}

[sub_resource type="Animation" id="Animation_tmhvk"]
resource_name = "Attack2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePlayer1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [100, 101, 102, 103, 104, 105]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c37xx"]
_data = {
"Attack1": SubResource("Animation_crqxu"),
"Attack2": SubResource("Animation_tmhvk"),
"Idle": SubResource("Animation_gqi7f"),
"RESET": SubResource("Animation_il7o1"),
"Running": SubResource("Animation_k3a2f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpn4y"]
size = Vector2(16, 36.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mcbc"]
size = Vector2(38.6667, 34)

[node name="Player1" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(3, 3)
script = ExtResource("1_wcbko")

[node name="SpritePlayer1" type="Sprite2D" parent="."]
texture = ExtResource("2_05qqg")
hframes = 20
vframes = 8
frame = 40

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c37xx")
}

[node name="CharacterCollision" type="CollisionShape2D" parent="."]
position = Vector2(-2.86102e-06, -0.666667)
shape = SubResource("RectangleShape2D_fpn4y")

[node name="AttackZone" type="Area2D" parent="."]
position = Vector2(-7.33333, -0.666667)

[node name="attack1Collision" type="CollisionShape2D" parent="AttackZone" groups=["Attacks"]]
light_mask = 2
visibility_layer = 2
position = Vector2(37.6667, 0.333332)
shape = SubResource("RectangleShape2D_3mcbc")
disabled = true
debug_color = Color(0.791336, 0.0878972, 0.235688, 0.42)

[node name="attack2Collision" type="CollisionShape2D" parent="AttackZone" groups=["Attacks"]]
light_mask = 2
visibility_layer = 2
position = Vector2(94.6667, 0.333334)
shape = SubResource("RectangleShape2D_3mcbc")
disabled = true
debug_color = Color(0.791336, 0.0878972, 0.235688, 0.42)

[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
